# isar-anymal

./: .dockerignore  .env.example  .gitignore  Dockerfile.Isar  README.md  SECURITY.md  catalog-info.yaml  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md  improvement.md
.github/workflows/: deploy_to_development.yml  deploy_to_staging.yml  promote_to_production.yml  test_and_lint_python_package.yml
ads_api/: Dockerfile  api.py  requirements.txt
ads_api/scripts/: entrypoint.sh  install_ads_cli.sh
ads_api/settings/: settings.py
src/isar_anymal/: __init__.py  robotinterface.py
src/isar_anymal/config/: __init__.py  settings.env  settings.py
src/isar_anymal/config/maps/: klab_compressor.json  northern_lights.json
src/isar_anymal/open_telemetry/: metrics_handler.py
src/isar_anymal/robot/api/: api.py  mission_status_handler.py  request_handler.py  sse_handler.py
src/isar_anymal/robot/api/ads_api/: api.py
src/isar_anymal/robot/api/anymal_api/: api.py  enums.py  models.py
src/isar_anymal/robot/api/anymal_api/server_sent_event_handlers/: battery_handler.py  control_status_handler.py  inspection_handler.py  main_body_state_handler.py  pose_handler.py  utilities.py
src/isar_anymal/robot/api/media_stream/: __init__.py  media_stream.py
src/isar_anymal/robot/api/utilities/: iteration.py  mission.py
src/isar_anymal/robot/api/utilities/anybotics_file_handler/: anymal_ads_file_transfer.py  environment_utils.py  mission_utils.py  yaml_dumper.py
tests/: conftest.py
tests/robot/: test_robotinterface.py  utilities.py
tests/robot/api/: test_api.py  test_migrate_to_api_tests.py
tests/robot/api/anymal_api/: test_anymal_api.py
